# nufebmgr

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
examples/T6SS/: main.py
examples/control_output/: no_hdf5_dump.py  no_vtk_output.py
examples/layout_with_image/: layout_w_image.py  main.py
examples/limit_biofilm_height/: limit_biofilm_height.py  main.py
examples/noisy_strips/: all_noise.py  high_noise.py  low_noise.py  medium_noise.py  no_noise.py  proportional_no_noise.py
examples/poisson_layout/: main.py  poisson_layout.py
examples/simple_starter/: main.py  simple_starter.py
examples/stop_at_biomass_pct/: main.py  stop_at_biomass_pct.py
examples/substrate_control/: bulk_substrate.py  explicit_substrate_grid.py
examples/taxa_libraries/: denit_only_taxon.json  main.py  nitrogen_anaerobic.json  nitrogen_anaerobic.py  taxa_libraries.py
nufebmgr/: BugDumpSpec.py  BugPos.py  ChemDumpSpec.py  DumpTools.py  HDF5DumpSpec.py  InputScriptBuilder.py  NufebProject.py  NufebScriptUtils.py  SimulationBox.py  Substrate.py  TaxaAssigmentManager.py  __init__.py  default_inputscript.py  inputscript_template.py  nufeb_spatial_analysis.py  poisson.py
tests/: test_BugDumpSpec.py  test_ChemDumpSpec.py  test_DumpFile.py  test_InputScriptBuilder.py  test_NufebProject.py  test_SimulationBox.py  test_nufeb_script_utils.py  test_nufeb_spatial_analysis.py
tests/data/: birth5_dump1.txt  example_het_taxa.json  example_nitrogen_anaerobic_extra_het_taxa.json  example_nitrogen_anaerobic_taxa.json  expected_births_dump_1.csv  (+4 more)
(+5 files in other folders)
